fix: jump in button and handleClickBalance

--- a/src/components/UserMenu/UserMenu.css
+++ b/src/components/UserMenu/UserMenu.css
@@ -6,7 +6,7 @@
 }
 
 .dcl .user-menu__jump-in {
-  padding: 5px 32px;
+  padding: 14px 32px;
   margin-left: 24px;
 }
 
